# Jupiter-Dex-Substreams

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FOUNDATIONAL_STORES.md  JWT_TESTING.md  LICENSE  METADATA.md  PUBLISHING.md  README.md  UPGRADING.md  buf.yaml  build-package.sh  build.rs  jupiter-dex-substreams-v0.3.0.spkg  jupiter-dex-substreams-v0.3.1.spkg  jupiter-dex-substreams-v0.3.2.spkg  jupiter-dex-substreams-v0.3.3.spkg  package.json  publish.yaml  schema.clickhouse.sql  schema.sql  simple-test.yaml  substream-publish.yaml  substream.yaml  substreams.dev.yaml  substreams.yaml
docs/: ARCHITECTURE.md
jupiter/events/v1/: events.proto
proto/sf/jupiter/v1/: types.proto
src/: constants.rs  db_out.rs  jupiter_analytics.rs  jupiter_instructions.rs  jupiter_trading_store.rs  jwt_test.rs  lib.rs  spl_account_store.rs  stores.rs  token_price_store.rs
src/pb/: .last_generated_hash  jupiter.events.v1.rs  mod.rs  sf.jupiter.v1.rs
test/: curl_jwt_test.sh  jwt_test.yaml  simple_curl_test.sh  test_jwt.sh
