[package]
name = "jupiter-dex-substreams"
version = "0.2.0"
edition = "2021"

[dependencies]
# Substreams core dependencies
substreams = "0.13"
substreams-solana = "0.13"

# Foundational Store dependencies
substreams-store = "0.13"

# Jupiter DEX specific dependencies
jupiter-events-v1 = { path = "jupiter/events/v1" }

# Additional dependencies for Jupiter DEX
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
prost-types = "0.12"
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
base64 = "0.21"
bs58 = "0.5"

[build-dependencies]
prost-build = "0.12"